🚑️ Fix overflow and scroll

--- a/front/src/assets/style/components/contacts.scss
+++ b/front/src/assets/style/components/contacts.scss
@@ -80,7 +80,7 @@ section {
         display: flex;
         flex-direction: column;
 
-        width: 17vw;
+        width: 13vw;
         margin-left: 11px;
 
         h3, p {
