--- a/front/src/assets/style/style.scss
+++ b/front/src/assets/style/style.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
+html, body, #app {
+  height: 100%;
+}
+
 body {
   margin: 0;
   overflow: hidden;
